fixed bug with list items overlapping on mobile

--- a/client/src/components/Home/main-section/about-page/About.scss
+++ b/client/src/components/Home/main-section/about-page/About.scss
@@ -14,7 +14,7 @@
       content: '\2022';
       color: $secondary-color;
       display: inline-block;
-      width: 1em;
+      width: 0.5em;
       margin-left: -1em;
       font-weight: bold;
    }
